apps/oxlint/src/snapshots/_fixtures__mpx__debugger.mpx@oxlint.snap
---
source: apps/oxlint/src/tester.rs
assertion_line: 134
---
########## 
arguments: fixtures/mpx/debugger.mpx
working directory: 
----------

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\eslint(no-debugger)]8;;\: `debugger` statement is not allowed
   ,-[fixtures/mpx/debugger.mpx:6:5]
 5 | <script>
 6 |     debugger
   :     ^^^^^^^^
 7 | </script>
   `----
  help: Remove the debugger statement

Found 1 warning and 0 errors.
Finished in <variable>ms on 1 file with 90 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
