apps/oxlint/src/snapshots/_fixtures__mpx__empty.mpx@oxlint.snap
---
source: apps/oxlint/src/tester.rs
assertion_line: 134
---
########## 
arguments: fixtures/mpx/empty.mpx
working directory: 
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 1 file with 90 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
