apps/oxlint/src/snapshots/_fixtures__mpx__typescript.mpx@oxlint.snap
---
source: apps/oxlint/src/tester.rs
assertion_line: 134
---
########## 
arguments: fixtures/mpx/typescript.mpx
working directory: 
----------

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\eslint(no-debugger)]8;;\: `debugger` statement is not allowed
   ,-[fixtures/mpx/typescript.mpx:7:5]
 6 |     const foo: string = "hello";
 7 |     debugger;
   :     ^^^^^^^^^
 8 | </script>
   `----
  help: Remove the debugger statement

Found 1 warning and 0 errors.
Finished in <variable>ms on 1 file with 90 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
